# edi-framework

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  requirements.txt  test-requirements.txt
custom_module/: README.rst  __manifest__.py
edi_account_edifact_oca/: README.rst  __manifest__.py
edi_account_invoice_import/: __manifest__.py
edi_account_invoice_import_ubl/: __manifest__.py
edi_account_invoice_import_ubl_endpoint_example/: README.rst  __manifest__.py
edi_account_oca/: README.rst  __manifest__.py
edi_backend_partner_oca/: README.rst  __manifest__.py
edi_edifact_oca/: README.rst  __manifest__.py
edi_endpoint_oca/: README.rst  __manifest__.py
edi_exchange_deduplicate_oca/: README.rst  __manifest__.py
edi_exchange_record_company/: README.rst  __manifest__.py
edi_exchange_template_oca/: README.rst  __manifest__.py
edi_exchange_type_auto/: README.rst  __manifest__.py
edi_notification_oca/: README.rst  __manifest__.py
edi_oca/: README.rst  __manifest__.py
edi_partner_oca/: README.rst  __manifest__.py
edi_party_data_oca/: README.rst  __manifest__.py
edi_product_multi_barcode_oca/: README.rst  __manifest__.py
edi_product_oca/: README.rst  __manifest__.py
edi_purchase_oca/: README.rst  __manifest__.py
edi_record_metadata_oca/: README.rst  __manifest__.py  fields.py
edi_sale_edifact_oca/: README.rst  __manifest__.py
edi_sale_utm_oca/: README.rst  __manifest__.py
edi_state_oca/: README.rst  __manifest__.py
edi_stock_oca/: README.rst  __manifest__.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+322 files in other folders)
